# TExpressionSolver

./: Arithmetic.slnx  CMakeLists.txt  Отчет Арифметика.docx  Отчет Матрицы.docx
Arithmetic/: Arithmetic.vcxproj
src/: TExpressionSolver.cpp  TExpressionSolver.h
tests/: test_tarithmetic.cpp
